--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <div></div>
           </div>
         </div>
+        
         <div class="player-content">
           <div id="player-album-art">
             <img
@@ -39,11 +40,15 @@
               alt="song cover art"
             />
           </div>
+
+          <!-- display of the player -->
           <div class="player-display">
             <div class="player-display-song-artist">
               <p id="player-song-title"></p>
               <p id="player-song-artist"></p>
             </div>
+
+            <!-- buttons of the player -->
             <div class="player-buttons">
               <button id="previous" class="previous" aria-label="Previous">
                 <svg
@@ -101,6 +106,8 @@
           </div>
         </div>
       </div>
+
+
       <div class="playlist">
         <div class="playlist-bar">
           <div class="parallel-lines">
@@ -116,6 +123,6 @@
         <ul id="playlist-songs"></ul>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="srcipt.js"></script>
   </body>
 </html>
